fix vote style, more readable, column style

--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -2,6 +2,25 @@ li a {
     color: red;
 }
 
+
+.column {
+    float: left;
+    width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.font-choice {
+    font-size: 1.5rem;
+}
+
+
+
 div {
     box-sizing: border-box;
     border-color: black;
